fix layout bug on demo tabpanels

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -18,6 +18,7 @@
 	}
 
 	&-center {
+		@include oGridContainer($grid-mode: "fluid", $bleed: true);
 		width: 100%;
 		padding: 20px;
 	}
